<resources>
    <string name="app_name">Stories</string>
    <string name="enter_email">Введите ваш email</string>
    <string name="app_description">Приложение, в котором можно делиться историями</string>
    <string name="log_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="checkInput">Проверьте введенные данные</string>
    <string name="noInternerConnection">Нет интернет соединения</string>
    <string name="authorizationFailed">Ошибка авторизации</string>
    <string name="next">Далее</string>
    <string name="back">Назад</string>
    <string name="email">Email</string>
    <string name="create_password_description">Придумайте надежный пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="what_is_your_name">Как вас зовут?</string>
    <string name="enter_name">Введите ваше имя</string>
    <string name="registrationFailed">Ошибка регистрации</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac placerat dolor lectus quis orci. Phasellus consectetuer vestibulum elit. Aenean tellus metus, bibendum sed, posuere ac, mattis non, nunc. Vestibulum fringilla pede sit amet augue. In turpis. Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis. Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce id purus. Ut varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis</string>
    <string name="complete">Готово</string>
    <string name="edit">Редактировать</string>
    <string name="subscribe">Подписаться</string>
    <string name="settings">Настройки</string>
    <string name="account">Аккаунт</string>
    <string name="log_out">Выйти</string>
    <string name="type_of_story">Тип истории</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="historical">Историческая</string>
    <string name="funny">Смешная</string>
    <string name="scary">Страшная</string>
    <string name="life">Жизненная</string>
    <string name="tale">Рассказ</string>
    <string name="story_added_successfully">История успешно добавлена</string>
    <string name="error">Ошибка</string>
    <string name="add_story">Добавить историю</string>
    <string name="subscriptions">Подписки</string>
    <string name="total_stories">Всего историй</string>
    <string name="total_subscribers">Всего подписчиков</string>
    <string name="success">Успех</string>
    <string name="unsubscribe">Отписаться</string>
    <string name="subscribed">Подписка оформлена</string>
    <string name="unsubscribed">Подписка отменена</string>
    <string name="subscribe_to_at_least_one_user">Подпишитесь хотя бы на одного человека</string>
    <string name="no_subscriptions">Вы не подписаны ни на одного человека</string>
    <string name="search">Поиск</string>
    <string name="feed">Лента</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="first_name">Имя</string>
    <string name="change">Изменить</string>
    <string name="saving">Сохранение</string>
    <string name="loading">Загрузка</string>
    <string name="delete">Удалить</string>
    <string name="confirm_log_out">Вы действительно хотите выйти из аккаунта?</string>
    <string name="confirm_delete_story">Вы действительно хотите удалить историю?</string>
    <string name="story_deleted_successfully">История успешно удалена</string>
    <string name="confirm_delete_photo">Вы действительно хотите удалить фотографию?</string>
    <string name="this_story_was_deleted">Эта история была удалена</string>
    <string name="app_creator">Создатель приложения</string>
    <string name="subscription_limit_10">Нельзя подписаться больше, чем на 10 человек</string>

</resources>
