<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="@dimen/verticalIndent"
    android:paddingBottom="@dimen/verticalIndent"
    android:paddingLeft="@dimen/horizontalIndent"
    android:paddingRight="@dimen/horizontalIndent"
    tools:context=".ui.screens.start.LogInActivity">

    <TextView
        android:id="@+id/title"
        style="@style/InterfaceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/description"
        style="@style/InterfaceDescription"
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input1_layout"
        android:layout_marginTop="8dp"
        android:layout_below="@id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/gray_cc"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="8dp"
        android:layout_below="@id/input1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:backgroundTint="@color/gray_cc"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogIn"
        style="@style/Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonSignup"
        android:layout_centerHorizontal="true"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/buttonSignup"
        style="@style/Button.Accent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClickSignup"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_up" />

</RelativeLayout>