<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.start.SignUpActivity"
    android:paddingTop="@dimen/verticalIndent"
    android:paddingBottom="@dimen/verticalIndent"
    android:paddingLeft="@dimen/horizontalIndent"
    android:paddingRight="@dimen/horizontalIndent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        style="@style/InterfaceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"/>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonAccount"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"/>

        <Button
            android:id="@+id/buttonLogOut"
            style="@style/Button.Danger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/log_out"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonBack"
        style="@style/Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/back"/>

</LinearLayout>