<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.start.SignUpActivity"
    android:paddingTop="@dimen/verticalIndent"
    android:paddingBottom="@dimen/verticalIndent"
    android:paddingLeft="@dimen/horizontalIndent"
    android:paddingRight="@dimen/horizontalIndent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        style="@style/InterfaceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"/>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/photo_default"/>

            <ImageButton
                android:visibility="invisible"
                android:id="@+id/deletePhoto"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_close"
                android:background="@drawable/bg_circle"
                android:backgroundTint="@color/colorDanger"
                android:layout_gravity="bottom|end"/>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:id="@+id/uploadPhoto"
            style="@style/InterfaceDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_horizontal"
            android:text="@string/change"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:backgroundTint="@color/gray_cc"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonCancel"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/buttonSave"
            style="@style/Button.Accent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>
    </LinearLayout>

</LinearLayout>