<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:background="@color/gray_f5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stateListAnimator="@null">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/profilePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/colorAccent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:srcCompat="@drawable/ic_account" />

                <LinearLayout
                    android:background="@color/gray_f5"
                    android:layout_marginTop="200dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/horizontalIndent"
                        android:paddingTop="24dp"
                        android:paddingRight="@dimen/horizontalIndent">

                        <TextView
                            android:id="@+id/name"
                            style="@style/BigTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:visibility="gone"
                            android:id="@+id/textAppCreator"
                            style="@style/InterfaceDescription"
                            android:text="@string/app_creator"
                            android:textColor="@color/colorAccent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingTop="8dp"
                            android:paddingBottom="16dp">

                            <TextView
                                style="@style/ProfileParameter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:text="@string/total_stories" />

                            <TextView
                                android:id="@+id/totalStories"
                                style="@style/ProfileParameterValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentEnd="true"/>

                            <TextView
                                style="@style/ProfileParameter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/totalStories"
                                android:layout_alignParentStart="true"
                                android:layout_marginTop="8dp"
                                android:text="@string/total_subscribers" />

                            <TextView
                                android:id="@+id/totalSubscribers"
                                style="@style/ProfileParameterValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/totalStories"
                                android:layout_alignParentEnd="true"
                                android:layout_marginTop="8dp"/>

                            <TextView
                                android:visibility="gone"
                                style="@style/ProfileParameter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/totalSubscribers"
                                android:layout_alignParentStart="true"
                                android:layout_marginTop="8dp"
                                android:text="@string/success" />

                            <TextView
                                android:visibility="gone"
                                android:id="@+id/rating"
                                style="@style/ProfileParameterValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/totalSubscribers"
                                android:layout_alignParentEnd="true"
                                android:layout_marginTop="8dp"
                                android:text="90%" />

                        </RelativeLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/buttonCreateStory"
                        style="@style/Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/add_story" />

                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:overScrollMode="never"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/my_story_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_edit"
            android:tint="@color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

